deployments/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: billy
  labels:
    name: billy
    purpose: internal-diagnostic-tools
