deployments/kubernetes/asaf-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: asaf
  namespace: finout-tools
  labels:
    app: asaf
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: asaf
