deployments/kubernetes/billy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: billy
  namespace: billy
  labels:
    app: billy
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: billy
